--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     <TextView
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:text="Some sales" />
+    android:text="Some sales exmples. enjoy" />
     <Button
         android:layout_height="wrap_content"
         android:clickable="true"
@@ -56,7 +56,7 @@
         android:cursorVisible="true"
         android:layout_width="match_parent"
         android:id="@+id/button_PopLife"
-        android:text="PopLife"
+        android:text="Pop Life"
         android:linksClickable="true"
         android:onClick="goToPopLife"></Button>
 
